<resources>
    <string name="app_name">Tatneft Quest</string>
    <string name="hello_blank_fragment">Hello blank</string>

    <!-- ActivityAuthorization -->
    <string name="come">Войти</string>
    <string name="email">Ваша электронная почта</string>
    <string name="password">Ваш пароль</string>
    <string name="rememberPassword">Восстановить пароль</string>
    <string name="createAccount">Создать аккаунт</string>
    <string name="titleAuthorization">Авторизация</string>

    <!--activityRestorePassword-->
    <string name="enterEmail">Введите электронную почту</string>
    <string name="send">Восстановить</string>
    <string name="back">Вернуться назад</string>

    <!-- ActivityRegistration -->
    <string name="registration">Зарегистрироваться</string>
    <string name="addEmail">Введите электронную почту</string>
    <string name="passwordReg">Придумайте пароль</string>
    <string name="surname">Фамилия</string>
    <string name="namePeople">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="age">Дата рождение</string>
    <string name="repeatPassword">Введите повторный пароль</string>
    <string name="login">Придумайте логин</string>
    <string name="auth">Уже зарегистрированы? /Войти</string>
    <string name="titleRegistration">Регистрация</string>
    <string name="number">Введите номер телефона</string>
    <string name="gender">Пол</string>
    <string name="man">Мужской</string>
    <string name="female">Женский</string>

    <!-- slider -->
    <string name="nextBtn">Дальше</string>
    <string name="getStart">Старт</string>
    <string name="skip">Пропустить</string>

    <!--fragment_quest-->
    <string name="city">Город</string>
    <string name="company">Компания</string>
    <string name="resource">Ресурсы</string>
    <string name="titleForCity">Квест по истории города Альметьевск</string>
    <string name="titleForCompany">Квест по компании Татнефть имени В. Д. Шашина</string>
    <string name="titleForResource">Квест по ресурсосбережению</string>
    <string name="rating">Рейтинг: </string>
    <string name="textForCity">Данный квест позволит вам познакомиться с городом в интересной и захватывающей форме</string>
    <string name="textForCompany">Данный квест позволит вам познакомиться с компанией и узнать ее главные достижения</string>
    <string name="textForResource">Данный квест позволит вам узнать о разных способах ресурсосбережения</string>

    <!--fragment_startGeneral-->
    <string name="avgDuration">Средняя продолжительность</string>
    <string name="countPointOnRoute">Количество точек на маршруте</string>
    <string name="maxPoint">Максимальное количество баллов</string>
    <string name="firstPoint">Первая точка на маршруте</string>
    <string name="lastPoint">Последняя точка на маршруте</string>
    <string name="stop_quest">Прекратить квест</string>

    <!--activity_start_action-->
    <string name="showing_code_in_fragment">Showing code in fragment</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="name">Name</string>
    <string name="empty">---</string>
    <string name="site_name">Site Name</string>
    <string name="scan_a_code">Scan a QR Code</string>
    <string name="result_not_found">Result Not Found</string>
    <string name="show_scanner_from_fragment">Show Scanner From Fragment</string>
    <string name="point_1">Точка 1</string>
    <string name="name_location">Главный офис ПАО Татнефть</string>
    <string name="open_in_navigator">Открыть в навигаторе</string>
    <string name="place">Я уже на месте!</string>
    <string name="scanning">Сканировать</string>
    <string name="map">Карта</string>
    <string name="start_quest">Начать квест</string>

    <!--fragment_profile-->
    <string name="mail">Электронная почта</string>
    <string name="phone">Номер телефона</string>

    <!--fragment_help-->
    <string name="describe_problem">Опишите проблему</string>
    <string name="nameProblem">Заголовок проблемы</string>
    <string name="report_problem">Сообщить о проблеме</string>

    <!--fragment_prize-->
    <string name="choose">Выберите приз от ПАО "Татнефть" в зависимости от количества заработанных баллов.</string>
    <string name="prize_pen">150 баллов - Фирменная ручка</string>
    <string name="prize_tshort">175 баллов - Футболка</string>
    <string name="prize_cape">200 баллов - Фирменная бейсболка</string>
    <string name="prize_card">250 баллов - Топливная карта"</string>
    <string name="prize_power_bank">275 баллов - Power Bank</string>
    <string name="prize_backpack">300 баллов - Рюкзак</string>
    <string name="my_prize">Мои подарки</string>
    <string name="get_prize">Получить подарок</string>
    <string name="prize_bon">Призы и бонусы</string>

    <!--fragment_question-->
    <string name="point">точка</string>
    <string name="question">вопрос</string>
    <string name="description">описание</string>
    <string name="choose_correctly_answer">Выберите правильный ответ:</string>
    <string name="answer_first_questions">Ответ на первый вопрос</string>
    <string name="answer_two_questions">Ответ на второй вопрос</string>
    <string name="answer_correctly_questions">Ответ на правильный вопрос</string>
    <string name="reply">Ответить</string>

    <!--fragment_location_history-->
    <string name="pass_test">Пройти тестирование</string>

    <!--fragment_about_application-->
    <string name="version">Версия 1.0.15</string>
    <string name="about_app">© 2021 студенты &quot;Альметьевского политехнического техникума&quot;</string>
    
    <!--fragment_developers-->
    <string name="page_in_developer">Страница находится в разработке</string>
    <string name="parting">С уважением, Tatneft Quest</string>
</resources>
