<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mainRelative"
    tools:context=".travelPackage.QuestTestFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:id="@+id/pointLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/questionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pointLocation"
                android:layout_marginTop="10dp"
                android:text="@string/question"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/questionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/questionNumber"
                android:layout_marginTop="15dp"
                android:text="@string/description"
                android:textSize="20sp" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/questionText"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/indication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/choose_correctly_answer"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/answerOne"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/indication"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/border_button_green"
                    android:text="@string/answer_first_questions"
                    android:textAllCaps="false"
                    android:textColor="@color/green"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/answerTwo"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answerOne"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_button_green"
                    android:text="@string/answer_two_questions"
                    android:textAllCaps="false"
                    android:textColor="@color/green"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/answerThree"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answerTwo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_button_green"
                    android:text="@string/answer_correctly_questions"
                    android:textAllCaps="false"
                    android:textColor="@color/green"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/reply"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answerThree"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_button_red"
                    android:text="@string/reply"
                    android:textColor="@color/white"
                    android:visibility="visible" />

                <ImageButton
                    android:id="@+id/nextQuestion"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_below="@id/answerThree"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/circle_button"
                    android:src="@drawable/ic_array"
                    android:visibility="gone" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>