<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.AuthorizationFragment">

    <RelativeLayout
        android:id="@+id/AutoLayout"
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="40dp"
        android:paddingEnd="30dp"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_authorization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label1"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_authorization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:stateListAnimator="@animator/button_elevation"
            android:text="@string/rememberPassword"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/change_password"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/comeButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_save_active"
                android:stateListAnimator="@animator/button_elevation"
                android:text="@string/come"
                android:textColor="@color/white" />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>