<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.PrizeFragment">

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/choose"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/block1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/description"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/item1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_login">

                    <ImageButton
                        android:id="@+id/image_click_one"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerHorizontal="true"
                        android:background="?android:attr/selectableItemBackground" />

                    <ImageView
                        android:id="@+id/image1"
                        style="@style/cardImage"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/pen" />

                    <TextView
                        android:id="@+id/text1"
                        style="@style/cardText"
                        android:layout_below="@+id/image1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/prize_pen"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/radio_button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/item2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_login">

                    <ImageButton
                        android:id="@+id/image_click_two"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerHorizontal="true"
                        android:background="?android:attr/selectableItemBackground" />

                    <ImageView
                        android:id="@+id/image2"
                        style="@style/cardImage"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/tshort" />

                    <TextView
                        android:id="@+id/text2"
                        style="@style/cardText"
                        android:layout_below="@+id/image2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/prize_tshort"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/radio_button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/block2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/block1">

                <RelativeLayout
                    android:id="@+id/item3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_login">

                    <ImageButton
                        android:id="@+id/image_click_three"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="5dp"
                        android:background="?android:attr/selectableItemBackground" />

                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/cap"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/text3"
                        style="@style/cardText"
                        android:layout_below="@+id/image3"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/prize_cape"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/radio_button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/item4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/item3"
                    android:layout_weight="1"
                    android:background="@drawable/shape_login">

                    <ImageButton
                        android:id="@+id/image_click_four"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="5dp"
                        android:background="?android:attr/selectableItemBackground" />

                    <ImageView
                        android:id="@+id/image4"
                        style="@style/cardImage"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/tatneft_card" />

                    <TextView
                        android:id="@+id/text4"
                        style="@style/cardText"
                        android:layout_below="@+id/image4"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="250 баллов - Топливная карта"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/radio_button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/block3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/block2">

                <RelativeLayout
                    android:id="@+id/item5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_login">

                    <ImageButton
                        android:id="@+id/image_click_five"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerHorizontal="true"
                        android:background="?android:attr/selectableItemBackground" />

                    <ImageView
                        android:id="@+id/image5"
                        style="@style/cardImage"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/power_bank" />

                    <TextView
                        android:id="@+id/text5"
                        style="@style/cardText"
                        android:layout_below="@+id/image5"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/prize_power_bank"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/radio_button5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/item6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/item5"
                    android:layout_weight="1"
                    android:background="@drawable/shape_login">

                    <ImageButton
                        android:id="@+id/image_click_six"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="5dp"
                        android:background="?android:attr/selectableItemBackground" />

                    <ImageView
                        android:id="@+id/image6"
                        style="@style/cardImage"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/backpack" />

                    <TextView
                        android:id="@+id/text6"
                        style="@style/cardText"
                        android:layout_below="@+id/image6"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/prize_backpack"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/radio_button6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/footerRelative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/block3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:weightSum="100">

                <Button
                    android:id="@+id/seeingMap"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="50"
                    android:background="@drawable/border_button_red"
                    android:text="@string/my_prize"
                    android:textColor="@color/red" />

                <Button
                    android:id="@+id/inPlace"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="50"
                    android:background="@drawable/background_button_red"
                    android:text="@string/get_prize"
                    android:textColor="@color/white" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>